# hennessy-milner-logic

./: .gitignore  .gitlab-ci.yml  hml.cabal  package.yaml  readme.md  references.yml  report.typ  slides.typ  stack.yaml  unlit  unlit.hs
.github/workflows/: lint.yml
lib/: Bisim.lhs  Distinguish.lhs  HML.lhs  LTS.lhs
unlit/: license  unlit.cabal  unlit.hs
