cabal-version:      3.12

name:               unlit
version:            0.1
synopsis:           Literate pre-processor for Typst

source-repository head
  type: git
  location: https://tangled.org/oppi.li/typst-unlit

executable unlit
  main-is: unlit.hs
  build-depends: base
  default-language: Haskell2010
